<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="action_example">Player</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text1">Loading...</string>
    <string name="appwidget_text2">WN8 rating</string>
    <string name="appwidget_text3">Battles</string>
    <string name="appwidget_text4">Wins</string>
    <string name="caption_stat_gr">Show rating line</string>
    <string name="caption_stat_gr_1">Session count</string>
    <string name="caption_tanks_gr">Battle on vehince ></string>
    <string name="classes1">HT</string>
    <string name="classes2">MT</string>
    <string name="classes3">SPGs</string>
    <string name="classes4">TD</string>
    <string name="classes5">LT</string>
    <string name="comp_tab_name1">PLAYERS SELECTION</string>
    <string name="comp_tab_name2">MATCHING RESULTS</string>
    <string name="comp_tanks_btn1">Detail</string>
    <string name="err_load_data_msg">Error in loading data</string>
    <string name="ingogr1">Battles by tiers</string>
    <string name="ingogr2">Avg wins by tiers</string>
    <string name="ingogr3">Avg damage by tiers</string>
    <string name="ingogr4">Avg XP by tiers</string>
    <string name="ingogr5">Avg WN8 by tiers</string>
    <string name="infogr6">"Battles by nations"</string>
    <string name="infogr7">"Battles by classes"</string>
    <string name="instad_1">To select a player, click the upper right corner on the Select a player. In the further the player can be re-selected by clicking on his nickname. All statistics and search history is stored</string>
    <string name="it_history1">Battles</string>
    <string name="it_history2">Wins</string>
    <string name="it_history3">WN8</string>
    <string name="it_history4">WN6</string>
    <string name="it_history5">ER</string>
    <string name="it_history6">DMG</string>
    <string name="it_history7">EXP</string>
    <string name="it_history8">Last battle</string>
    <string name="msg_player_delete">Player is active, cant be deleted</string>
    <string name="msg_player_delete1">Player using in widget, cant be deleted</string>
    <string name="msg_player_delete_cancel">Cancel</string>
    <string name="msg_player_delete_q">Deleting player from the list will delete all saved statistics history. Continue?</string>
    <string name="msg_player_delete_q1">Deleting all saved vehicles statistics history. Continue?</string>
    <string name="msg_player_delete_ttl">Deleting a player</string>
    <string name="msg_player_delete_ttl1">Deleting vehicles statistics</string>
    <string name="msg_wait1">Please wait…</string>
    <string name="msg_wait2">Statistics loading</string>
    <string name="msg_wait3">Vehicle loading</string>
    <string name="no_select">No player selected</string>
    <string name="obzor1">[Vehicle not select]</string>
    <string name="obzor10">Coated Optics</string>
    <string name="obzor11">Binocular Telescope</string>
    <string name="obzor12">Improved ventilation</string>
    <string name="obzor13">Consumables (pudding and tea, chocolate etc)</string>
    <string name="obzor14">Brothers in Arms</string>
    <string name="obzor15">Situational Awareness</string>
    <string name="obzor16">Recon</string>
    <string name="obzor17">Skills</string>
    <string name="obzor2">Basic</string>
    <string name="obzor3">Calculated</string>
    <string name="obzor4">Choice of vehicle</string>
    <string name="obzor5">Equipment and skills</string>
    <string name="obzor6">Result</string>
    <string name="obzor7">Selected vehicle:</string>
    <string name="obzor8">[not select]</string>
    <string name="obzor9">Equipment</string>
    <string name="player_err_msg1">Selected player is already in list</string>
    <string name="player_err_msg2">You can match players only from the same region as the main player</string>
    <string name="player_max_msg1">You can add maximum</string>
    <string name="player_max_msg2">players</string>
    <string name="player_min_msg1">Select at least 2 players</string>
    <string name="player_select_name">Select a player</string>
    <string name="plz_wait">Please wait</string>
    <string name="search_name">Player selection</string>
    <string name="session_history1">Battles</string>
    <string name="session_history2">Winrate</string>
    <string name="session_history3">Avg damage</string>
    <string name="session_history4">Avg destroyed</string>
    <string name="session_history5">Avg spotted</string>
    <string name="session_history6">Avg experience</string>
    <string name="session_history7">Efficiency rating</string>
    <string name="session_history8">WN6 rating</string>
    <string name="session_history9">WN8 rating</string>
    <string name="session_history_text_average">average</string>
    <string name="session_history_text_bysession">by session</string>
    <string name="session_history_text_deltaandavg">Difference and average</string>
    <string name="session_history_text_session">By session</string>
    <string name="session_history_text_value">Value</string>
    <string name="sett1">If you want to disable ads:</string>
    <string name="sett2">Ads disable!</string>
    <string name="sett_btn1">Disable ads</string>
    <string name="stat_comp_tank_ttl1">Battles count</string>
    <string name="stat_comp_tank_ttl10">Maximum destroyed</string>
    <string name="stat_comp_tank_ttl11">Maximum experience</string>
    <string name="stat_comp_tank_ttl12">Hits percents</string>
    <string name="stat_comp_tank_ttl2">Winrate</string>
    <string name="stat_comp_tank_ttl3">Average damage</string>
    <string name="stat_comp_tank_ttl4">Average experience</string>
    <string name="stat_comp_tank_ttl5">WN8 rating</string>
    <string name="stat_comp_tank_ttl6">Average destroyed</string>
    <string name="stat_comp_tank_ttl7">Average spotted</string>
    <string name="stat_comp_tank_ttl8">Base capture per battle</string>
    <string name="stat_comp_tank_ttl9">Base defence per battle</string>
    <string name="stat_comp_ttl1">Battles count</string>
    <string name="stat_comp_ttl10">Average spotted</string>
    <string name="stat_comp_ttl11">Average vehicle level</string>
    <string name="stat_comp_ttl12">Base capture per battle</string>
    <string name="stat_comp_ttl13">Base defence per battle</string>
    <string name="stat_comp_ttl2">Winrate</string>
    <string name="stat_comp_ttl3">WN8 rating</string>
    <string name="stat_comp_ttl4">WN6 rating</string>
    <string name="stat_comp_ttl5">Efficiency rating</string>
    <string name="tanks_avg_param1">Player</string>
    <string name="tanks_avg_param2">Agv</string>
    <string name="tanks_avg_param3">Delta</string>
    <string name="ttl_about">WoT Analythic application developed as a Wargaming Developers Partner Program and it is a non-official application for statistics display</string>
    <string name="ttl_about1">Special thanks:</string>
    <string name="ttl_about2">Maxim Baturov (Dominatio) - translation</string>
    <string name="ttl_about3">Andrey Krivoshein (akrivoshein) - testing</string>
    <string name="ttl_about4">Astrakhantsev Vadim (Vadymka04) - testing</string>
    <string name="ttl_about_all_r_r">All rights reserved</string>
    <string name="ttl_version">Version:</string>
    <string name="version">1.1.19</string>
</resources>