<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <FrameLayout android:background="#ff373737" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb9b9b9" android:layout_gravity="center_horizontal" android:id="@id/textView19" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor4" />
            </FrameLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:id="@id/layoutTanks" android:layout_width="150.0dip" android:layout_height="wrap_content">
                    <Spinner android:entries="@array/nations" android:id="@id/spinnerNation" android:layout_width="fill_parent" android:layout_height="40.0dip" />
                    <Spinner android:entries="@array/level" android:id="@id/spinnerLevel" android:layout_width="fill_parent" android:layout_height="40.0dip" />
                    <Spinner android:entries="@array/classType" android:id="@id/spinnerClass" android:layout_width="fill_parent" android:layout_height="40.0dip" />
                </LinearLayout>
                <ListView android:id="@id/listTanks" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <FrameLayout android:background="#ff373737" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb9b9b9" android:layout_gravity="center_horizontal" android:id="@id/textView20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor5" />
            </FrameLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="5.0">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff484848" android:id="@id/textView199" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/obzor7" />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/textView209" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/main_nick" android:id="@id/textViewTankSelect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor8" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff484848" android:id="@id/textView222" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/obzor9" />
                    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:id="@id/checkBoxOptica" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor10" />
                    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:id="@id/checkTruba" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor11" />
                    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:id="@id/checkBoxVent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor12" />
                    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:id="@id/checkBoxRas" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor13" />
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff484848" android:id="@id/textView27" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/obzor17" />
                    <CheckBox android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:id="@id/checkBoxBB" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor14" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:layout_gravity="center_vertical" android:id="@id/textView240" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/obzor15" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <SeekBar android:id="@id/seekBarRadio" android:layout_width="229.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
                            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff343434" android:layout_gravity="center_vertical" android:id="@id/textViewRadio" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="100" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff191919" android:layout_gravity="center_vertical" android:id="@id/textView24" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/obzor16" />
                        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
                            <SeekBar android:id="@id/seekBarGlas" android:layout_width="229.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" />
                            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff343434" android:layout_gravity="center_vertical" android:id="@id/textViewGlas" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="100" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            </LinearLayout>
            <FrameLayout android:background="#ff373737" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ffb9b9b9" android:layout_gravity="center_horizontal" android:id="@id/textView21" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/obzor6" />
            </FrameLayout>
            <com.github.mikephil.charting.charts.BarChart android:id="@id/chartObzor" android:layout_width="fill_parent" android:layout_height="300.0dip" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>