<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="1.0">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textAppearance="?android:textAppearanceLarge" android:textSize="20.0dip" android:layout_gravity="center" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="© 2015 Infrns studio" />
                        <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="fill_parent">
                            <TextView android:textSize="18.0dip" android:layout_gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_version" />
                            <TextView android:textSize="18.0dip" android:layout_gravity="center" android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text=" " />
                            <TextView android:textSize="18.0dip" android:layout_gravity="center" android:id="@id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/version" />
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <TextView android:textStyle="bold" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textThx1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_about1" android:singleLine="false" />
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textThx2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_about2" android:singleLine="false" />
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textThx3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_about3" android:singleLine="false" />
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textThx4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_about4" android:singleLine="false" />
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textThx" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="" android:singleLine="false" />
            <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_column="11" android:text="@string/ttl_about" android:singleLine="false" />
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:layout_gravity="center_horizontal" android:id="@id/textView2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="© " android:layout_weight="1.0" />
                <TextView android:autoLink="web" android:id="@id/textView4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="Wargaming.net" android:layout_weight="1.0" />
                <TextView android:id="@id/textView7" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text=" " android:layout_weight="1.0" />
                <TextView android:id="@id/textView5" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ttl_about_all_r_r" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <Button android:textColor="#ffffffff" android:id="@id/buttonOk" android:background="@color/main_nick" android:layout_width="fill_parent" android:layout_height="41.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:text="Ok" />
    </LinearLayout>
</FrameLayout>