<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/viewSessionHistory" android:background="@color/main_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/viewSessionHistoryHeader" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff838383" android:id="@id/textView44" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:text="@string/session_history_text_value" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff838383" android:id="@id/textView46" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:text="@string/session_history_text_session" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
        <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="#ff838383" android:id="@id/textView47" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:layout_marginBottom="5.0dip" android:minWidth="60.0dip" android:text="@string/session_history_text_deltaandavg" android:layout_below="@id/textView46" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <ListView android:id="@id/listViewSessionInfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:divider="#00ffffff" android:dividerHeight="0.0dip" />
</LinearLayout>